--- a/app/src/main/res/layout/photo_gallery_item.xml
+++ b/app/src/main/res/layout/photo_gallery_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -11,6 +12,7 @@
         android:id="@+id/iv_photo_item"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:scaleType="centerCrop">
+        android:scaleType="centerCrop"
+        app:setImageUrl="@{photoItem.url}">
     </ImageView>
 </layout>
